# VK-user-graph-API

./: Makefile  README.md  pyproject.toml
docker/: docker-compose.yaml
docker/app/: Dockerfile  template.env
docker/neo4j/: local.env
src/: config.py  db.py
src/app/: main.py  models.py  queries.py
src/app/utils/: logger.py
tests/: test_endpoints.py
